--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 
 <html>
     <head>
-        <title></title>
+        <title>Recipe Main Page</title>
         <meta charset="utf-8">
     </head>
 
     <body>
-        <h1>
-            Odin Recipes
-        </h1>
+        <h1>Odin Recipes</h1>
+        <img src="http://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/drooling-face.png">
+        <ul>
+            <li><a href="recipes/wings.html">Wings</a></li>
+        </ul>
+      
     </body>
 </html>
