Modify all recipe files and index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <img src="http://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/drooling-face.png">
         <ul>
             <li><a href="recipes/wings.html">Wings</a></li>
+            <li><a href="recipes/pizza.html">Pizza</a></li>
+            <li><a href="recipes/cheeseburger.html">Cheeseburger</a></li>
         </ul>
-      
     </body>
 </html>
